scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsDeclarationsTypedefPropertyAndExportAssignment.errors.txt
module.js(24,12): error TS2315: Type 'Object' is not generic.


==== index.js (0 errors) ====
    const {taskGroups, taskNameToGroup} = require('./module.js');
    
    /** @typedef {import('./module.js').TaskGroup} TaskGroup */
    
    /**
     * @typedef TaskNode
     * @prop {TaskNode[]} children
     * @prop {TaskNode|undefined} parent
     * @prop {TaskGroup} group
     */
    
    /** @typedef {{timers: Map<string, TaskNode>}} PriorTaskData */
    class MainThreadTasks {
        /**
         * @param {TaskGroup} x
         * @param {TaskNode} y
         */
        constructor(x, y){}
    }
    
    module.exports = MainThreadTasks;
==== module.js (1 errors) ====
    /** @typedef {'parseHTML'|'styleLayout'} TaskGroupIds */
    
    /**
     * @typedef TaskGroup
     * @property {TaskGroupIds} id
     * @property {string} label
     * @property {string[]} traceEventNames
     */
    
    /**
     * @type {{[P in TaskGroupIds]: {id: P, label: string}}}
     */
    const taskGroups = {
        parseHTML: {
            id: 'parseHTML',
            label: 'Parse HTML & CSS'
        },
        styleLayout: {
            id: 'styleLayout',
            label: 'Style & Layout'
        },
    }
    
    /** @type {Object<string, TaskGroup>} */
               ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
    const taskNameToGroup = {};
    
    module.exports = {
        taskGroups,
        taskNameToGroup,
    };